@@ -1,3 +1,7 @@
+[21 Feb 2007]
+
+* Use scoping instead of TagCountsExtension [Michael Schuerig]
+
 [7 Jan 2007]
 
 * Add :match_all to find_tagged_with [Michael Sheakoski]
